# routes/books.js
@@ -1,15 +1,15 @@
 const express = require('express');
 const router = express.Router();
 const booksController = require('../controllers/books');
-const { bookValidationRules } = require('../middleware/validate'); // Removed "validate"
+const { bookValidationRules } = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/authenticate'); // Add this!
 
 router.get('/', booksController.getAll);
 router.get('/:id', booksController.getSingle);
 
-// Removed () from bookValidationRules
-router.post('/', bookValidationRules, booksController.createBook);
-router.put('/:id', bookValidationRules, booksController.updateBook);
-
-router.delete('/:id', booksController.deleteBook);
+// --- PROTECTED ROUTES ---:
+router.post('/', isAuthenticated, bookValidationRules, booksController.createBook);
+router.put('/:id', isAuthenticated, bookValidationRules, booksController.updateBook);
+router.delete('/:id', isAuthenticated, booksController.deleteBook);
 
 module.exports = router;
